archive/xbackbone/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
    cert-manager.io/cluster-issuer: le-prod
  labels:
    app: xbackbone
  name: xbackbone
spec:
  rules:
    - host: images.waltr.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xbackbone
                port:
                  number: 80
  tls:
    - hosts: [images.waltr.tech]
      secretName: imageswaltrtech-cer
